[gd_scene load_steps=7 format=3 uid="uid://drvfxsbt0p5xq"]

[ext_resource type="Script" path="res://scenes/game_ui/game_ui.gd" id="1_tx2kr"]
[ext_resource type="LabelSettings" uid="uid://cvom6ebu66bmq" path="res://scenes/game_ui/lg_48_gray.tres" id="1_ux30l"]
[ext_resource type="LabelSettings" uid="uid://dfghslas3vvf3" path="res://scenes/main/lg_96_blue.tres" id="2_7bokx"]
[ext_resource type="FontFile" uid="uid://b13uhu1kqrrue" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="3_lwer5"]
[ext_resource type="AudioStream" uid="uid://dnxkkkrx50wu0" path="res://assets/audio/jazzyfrenchy.mp3" id="5_dln2r"]

[sub_resource type="LabelSettings" id="LabelSettings_c4uwb"]
font = ExtResource("3_lwer5")
font_size = 64
font_color = Color(0.435294, 0.588235, 1, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.376471)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_tx2kr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBTopLeft" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBTopLeft"]
layout_mode = 2
text = "Level 10"
label_settings = ExtResource("1_ux30l")

[node name="AttemptsLabel" type="Label" parent="MarginContainer/VBTopLeft"]
layout_mode = 2
text = "Attempts: 100"
label_settings = ExtResource("1_ux30l")

[node name="VBCenter" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CompleteLabel" type="Label" parent="MarginContainer/VBCenter"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("2_7bokx")

[node name="SpaceLabel" type="Label" parent="MarginContainer/VBCenter"]
layout_mode = 2
text = "Press Space"
label_settings = SubResource("LabelSettings_c4uwb")
horizontal_alignment = 1

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_dln2r")
volume_db = -20.0
autoplay = true
